# package-twitter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/package_twitter/: cli.py  tweet.py
tests/: a.py  test_tweets.py
