[project]
name = "package-twitter"
version = "0.1.0"
description = ""
authors = [
    {name = "Nivesh03",email = "niveshsharma67@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tweepy (>=4.15.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "package_twitter", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tweet = "package-twiiter.cli:main" # This defines the 'tweet' command